update the amq and database configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ camel.springboot.name=SpringBootCamelXa
 camel.component.servlet.mapping.context-path=/api/*
 
 # ActiveMQ
-broker.host=broker-amq-tcp
+broker.host=localhost
 broker.port=61616
 broker.username=theuser
 broker.password=Thepassword1!
@@ -13,11 +13,11 @@ spring.activemq.user=${broker.username}
 spring.activemq.password=${broker.password}
 
 # Database
-database.host=postgresql
+database.host=narayanaci1.eng.hst.ams2.redhat.com
 database.port=5432
-database.name=sampledb
-database.username=theuser
-database.password=Thepassword1!
+database.name=jbossts
+database.username=dtf11
+database.password=dtf11
 
 spring.datasource.url=jdbc:postgresql://${database.host}:${database.port}/${database.name}
 spring.datasource.username=${database.username}
