work for ms sqlserver

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,23 +3,23 @@ camel.springboot.name=SpringBootCamelXa
 camel.component.servlet.mapping.context-path=/api/*
 
 # ActiveMQ
-broker.host=broker-amq-tcp
-broker.port=61616
-broker.username=theuser
-broker.password=Thepassword1!
+broker.host=localhost
+broker.port=61617
+broker.username=admin
+broker.password=admin123.
 
 spring.activemq.broker-url=tcp://${broker.host}:${broker.port}
 spring.activemq.user=${broker.username}
 spring.activemq.password=${broker.password}
 
 # Database
-database.host=postgresql
-database.port=5432
-database.name=sampledb
-database.username=theuser
-database.password=Thepassword1!
+database.host=mssql-2016.rhev-ci-vms.eng.rdu2.redhat.com
+database.port=1433
+database.name=dballo12
+database.username=dballo12
+database.password=dballo12
 
-spring.datasource.url=jdbc:postgresql://${database.host}:${database.port}/${database.name}
+spring.datasource.url=jdbc:sqlserver://${database.host}:${database.port};DatabaseName=${database.name}
 spring.datasource.username=${database.username}
 spring.datasource.password=${database.password}
 
@@ -39,6 +39,7 @@ snowdrop.narayana.openshift.recovery.enabled=${cluster.recovery.enabled}
 snowdrop.narayana.openshift.recovery.current-pod-name=${cluster.nodename}
 snowdrop.narayana.openshift.recovery.statefulset=${cluster.name}
 snowdrop.narayana.openshift.recovery.status-dir=${cluster.base-dir}/status
+narayana.dbcp.enabled=true
 
 # Logging
 logging.level.com.arjuna=INFO
