--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
-
+	<dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+           <version>6.4.0.jre8</version>
+        </dependency>
     </dependencies>
 
     <build>
