update to use the artemis client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,17 @@ spring.activemq.broker-url=tcp://${broker.host}:${broker.port}
 spring.activemq.user=${broker.username}
 spring.activemq.password=${broker.password}
 
+spring.artemis.host=${broker.host}
+spring.artemis.user=${broker.username}
+spring.artemis.password=${broker.password}
+spring.artemis.port=${broker.port}
+
 # Database
 database.host=mssql-2016.rhev-ci-vms.eng.rdu2.redhat.com
 database.port=1433
-database.name=dballo12
-database.username=dballo12
-database.password=dballo12
+database.name=dballo07
+database.username=dballo07
+database.password=dballo07
 
 spring.datasource.url=jdbc:sqlserver://${database.host}:${database.port};DatabaseName=${database.name}
 spring.datasource.username=${database.username}
