--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-client</artifactId>
+            <artifactId>artemis-jms-client</artifactId>
         </dependency>
 
         <dependency>
